--- a/css/index.css
+++ b/css/index.css
@@ -125,6 +125,16 @@ main img {
   top: 150px;
 }
 
+@media (max-width:420px) {
+  main img {
+    left: calc(50vw - 60px);
+    top: 180px;
+  }
+  .dresses {
+    left: calc(50vw - 75px);
+  }
+}
+
 main img:nth-child(4) {
   transform: rotate(30deg);
   transform-origin: center bottom;
