--- a/css/index.css
+++ b/css/index.css
@@ -23,7 +23,6 @@ header h1, header p {
 header h1 {
   top: 80px;
   width: 500px;
-  text-align: center;
   left: calc(50vw - 250px);
   font-size: 50px;
   visibility: hidden;
@@ -37,7 +36,6 @@ header h1 {
 header p {
   top: 160px;
   width: 400px;
-  text-align: center;
   left: calc(50vw - 200px);
   font-family: sans-serif;
   visibility: hidden;
@@ -134,6 +132,15 @@ main img {
   .dresses {
     margin-left: calc(50vw - 75px);
   }
+  header h1 {
+  top: 120px;
+  width: 300px;
+  left: calc(50vw - 150px);
+  }
+  header p {
+  top: 200px;
+  width: 200px;
+  left: calc(50vw - 100px);
 }
 
 main img:nth-child(4) {
