--- a/css/index.css
+++ b/css/index.css
@@ -17,6 +17,7 @@ body {
 header h1, header p {
   z-index: 3;
   color: white;
+  text-align: center;
   position: absolute;
 }
 
@@ -142,7 +143,7 @@ main img {
   }
   header p {
     position: absolute;
-    top: 200px;
+    top: 270px;
     width: 200px;
     left: calc(50vw - 100px);
   }
