--- a/css/index.css
+++ b/css/index.css
@@ -17,11 +17,11 @@ body {
 header h1, header p {
   z-index: 3;
   color: white;
-  text-align: center;
   position: absolute;
 }
 
 header h1 {
+  text-align: center;
   top: 80px;
   width: 500px;
   left: calc(50vw - 250px);
@@ -35,6 +35,7 @@ header h1 {
 }
 
 header p {
+  text-align: center;
   top: 160px;
   width: 400px;
   left: calc(50vw - 200px);
@@ -130,7 +131,7 @@ main img {
     left: calc(50vw - 60px);
     top: 190px;
   }
-  .dresses {
+  main > div.dresses {
     position: absolute;
     left: calc(50vw - 60px);
     top: 430px;
@@ -141,10 +142,11 @@ main img {
     width: 300px;
     left: calc(50vw - 150px);
     text-align: center;
+    font-size: 30px;
   }
   header p {
     position: absolute;
-    top: 270px;
+    top: 320px;
     width: 200px;
     left: calc(50vw - 100px);
     text-align: center;
