--- a/css/index.css
+++ b/css/index.css
@@ -140,7 +140,8 @@ main img {
     position: absolute;
     top: 120px;
     width: 300px;
-    left: calc(50vw - 150px);
+    left: -60vw;
+    right: calc(50vw - 150px);
     text-align: center;
     font-size: 30px;
   }
@@ -150,6 +151,10 @@ main img {
     width: 200px;
     left: calc(50vw - 100px);
     text-align: center;
+  }
+  main > .footer {
+    position: absolute;
+    top: 200vh;
   }
 }
 
