--- a/css/index.css
+++ b/css/index.css
@@ -146,6 +146,7 @@ main img {
     font-size: 50px;
     font-weight: bolder;
     letter-spacing: 1px;
+    font-family: 'Crimson Foam';
   }
   header p {
     position: absolute;
