--- a/css/index.css
+++ b/css/index.css
@@ -126,7 +126,7 @@ main img {
 }
 
 @media (max-width:420px) {
-  * {
+  body {
     overflow-x: hidden;
   }
   main img {
@@ -158,7 +158,7 @@ main img {
     left: calc(50vw - 100px);
     text-align: center;
   }
-  main .footer {
+  main section.footer {
     padding: auto 5px auto 5px;
   }
 }
